generator client {
  provider = "prisma-client-js"
}

generator worker_client {
  provider = "prisma-client-js"
  output   = "../../worker/node_modules/.prisma/client"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserStatus {
  active
  suspended
}

enum CloneStatus {
  draft
  active
  paused
  retired
}

enum ModerationStatus {
  pending
  approved
  rejected
  pending_review
}

enum AgentSessionStatus {
  active
  completed
  cancelled
  wind_down
}

enum HandoffStatus {
  pending
  accepted
  declined
  expired
}

enum HandoffDecision {
  accept
  decline
}

enum MatchPushStatus {
  pending
  dismissed
  accepted
  bridged
}

model User {
  id           String     @id @default(uuid())
  phone        String?    @unique
  email        String?    @unique
  passwordHash String?    @map("password_hash")
  status       UserStatus @default(active)
  createdAt    DateTime   @default(now()) @map("created_at")
  updatedAt    DateTime   @updatedAt @map("updated_at")

  profile       Profile?
  digitalClone  DigitalClone?
  matchPushes   MatchPush[]   @relation("MatchPushUser")
  blocksInit    Block[]       @relation("Blocker")
  blocksRecv    Block[]       @relation("Blocked")
  auditEvents   AuditEvent[]
  reports       Report[]

  @@map("users")
}

model Profile {
  userId      String   @id @map("user_id")
  displayName String?  @map("display_name")
  avatarUrl   String?  @map("avatar_url")
  birthYear   Int?     @map("birth_year")
  gender      String?
  orientation String?
  city        String?
  bioJson         Json?    @map("bio_json")
  styleMd         String?  @map("style_md")
  matchPrefsJson  Json?    @map("match_prefs_json")
  privacyJson     Json?    @map("privacy_json")
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  user      User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  embedding ProfileEmbedding?

  @@map("profiles")
}

/// Prisma does not natively support the pgvector type.  The `embedding` column
/// is typed as `Json` here for Prisma compatibility.  After running
/// `npx prisma migrate dev` (or `db push`), apply the manual migration at
/// `prisma/migrations/manual-pgvector.sql` to convert the column to
/// `vector(1536)` and create the HNSW index.
///
/// All reads/writes to the `embedding` column should go through raw SQL
/// (`$executeRaw` / `$queryRaw`) to ensure correct pgvector operations.
model ProfileEmbedding {
  userId         String @id @map("user_id")
  embedding      Json
  idealEmbedding Json?  @map("ideal_embedding")

  profile Profile @relation(fields: [userId], references: [userId], onDelete: Cascade)

  @@map("profile_embeddings")
}

model DigitalClone {
  id        String      @id @default(uuid())
  userId    String      @unique @map("user_id")
  status    CloneStatus @default(draft)
  consentAt DateTime?   @map("consent_at")
  createdAt DateTime    @default(now()) @map("created_at")
  updatedAt DateTime    @updatedAt @map("updated_at")

  user          User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  personaPrompt PersonaPrompt?
  posts         Post[]
  comments      Comment[]
  likes         Like[]
  commentLikes  CommentLike[]
  auditEvents   AuditEvent[]

  @@map("digital_clones")
}

model PersonaPrompt {
  id             String   @id @default(uuid())
  cloneId        String   @unique @map("clone_id")
  version        Int      @default(1)
  promptText     String   @map("prompt_text")
  boundariesJson Json?    @map("boundaries_json")
  createdAt      DateTime @default(now()) @map("created_at")

  clone DigitalClone @relation(fields: [cloneId], references: [id], onDelete: Cascade)

  @@map("persona_prompts")
}

model Post {
  id               String           @id @default(uuid())
  cloneId          String           @map("clone_id")
  content          String
  moderationStatus ModerationStatus @default(pending) @map("moderation_status")
  publishedAt      DateTime?        @map("published_at")
  createdAt        DateTime         @default(now()) @map("created_at")
  /// 自动生成标记（专用列，替代 metadata_json 内的同名字段）。trigger !== 'manual' 即为 true。
  /// 历史数据由迁移 20260708000000 从 metadata_json 回填。
  isAutoGenerated  Boolean          @default(false) @map("is_auto_generated")
  /// 用户手动编辑时间。NULL 表示从未被编辑。
  editedAt         DateTime?        @map("edited_at")
  /// JSON metadata: { trigger: 'manual'|'idle'|'idle_72h'|'affinity_boost'|'welcome'|... }
  metadataJson     Json?            @map("metadata_json")

  clone    DigitalClone @relation(fields: [cloneId], references: [id], onDelete: Cascade)
  comments Comment[]
  likes    Like[]

  @@map("posts")
}

model Comment {
  id        String   @id @default(uuid())
  postId    String   @map("post_id")
  cloneId   String   @map("clone_id")
  parentId  String?  @map("parent_id")
  content   String
  createdAt DateTime @default(now()) @map("created_at")

  post    Post         @relation(fields: [postId], references: [id], onDelete: Cascade)
  clone   DigitalClone @relation(fields: [cloneId], references: [id], onDelete: Cascade)
  parent  Comment?     @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Cascade)
  replies Comment[]    @relation("CommentReplies")
  likes   CommentLike[]

  @@index([parentId])
  @@map("comments")
}

model Like {
  postId    String   @map("post_id")
  cloneId   String   @map("clone_id")
  createdAt DateTime @default(now()) @map("created_at")

  post  Post         @relation(fields: [postId], references: [id], onDelete: Cascade)
  clone DigitalClone @relation(fields: [cloneId], references: [id], onDelete: Cascade)

  @@id([postId, cloneId])
  @@map("likes")
}

/// 评论点赞：某分身对某评论的点赞（复合主键 commentId+cloneId，天然幂等防重）。
model CommentLike {
  commentId String   @map("comment_id")
  cloneId   String   @map("clone_id")
  createdAt DateTime @default(now()) @map("created_at")

  comment Comment      @relation(fields: [commentId], references: [id], onDelete: Cascade)
  clone   DigitalClone @relation(fields: [cloneId], references: [id], onDelete: Cascade)

  @@id([commentId, cloneId])
  @@index([cloneId])
  @@map("comment_likes")
}

model AgentSession {
  id               String             @id @default(uuid())
  cloneAId         String             @map("clone_a_id")
  cloneBId         String             @map("clone_b_id")
  status           AgentSessionStatus @default(active)
  startedAt        DateTime           @default(now()) @map("started_at")
  endedAt          DateTime?          @map("ended_at")
  metadataJson     Json?              @map("metadata_json")
  windDownAt       DateTime?          @map("wind_down_at")
  windDownReason   String?            @map("wind_down_reason")
  windDownBy       String?            @map("wind_down_by")
  dailyTurnCount   Int                @default(0) @map("daily_turn_count")
  dailyTurnDate    DateTime?          @map("daily_turn_date")

  messages      AgentMessage[]
  affinityScore AffinityScore?
  handoff       Handoff?

  @@map("agent_sessions")
}

model AgentMessage {
  id             String   @id @default(uuid())
  sessionId      String   @map("session_id")
  speakerCloneId String   @map("speaker_clone_id")
  content        String
  turnIndex      Int      @map("turn_index")
  bubbleIndex    Int      @default(0) @map("bubble_index")
  turnId         String?  @map("turn_id")
  delayMs        Int      @default(0) @map("delay_ms")
  createdAt      DateTime @default(now()) @map("created_at")

  session AgentSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([sessionId, turnIndex, bubbleIndex])
  @@index([sessionId, turnIndex])
  @@map("agent_messages")
}

model AffinityScore {
  sessionId     String   @id @map("session_id")
  score         Float
  breakdownJson Json?    @map("breakdown_json")
  updatedAt     DateTime @updatedAt @map("updated_at")

  session AgentSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@map("affinity_scores")
}

/// 【步骤1修复】AffectionState — per-pair 情感状态（替代文件存储）。
/// 存储约定：userAId < userBId（字典序），保证双向查询一致。
/// 一对（观察者, 对象）共享一行关系状态（familiarity/warmth/trust/tension + relationship_label）。
/// 注：列名 user_a_id/user_b_id 沿用任务约定，实际存储调用方传入的 ID（当前为 clone id），
///     不设 FK 约束以保持与现有调用方接口兼容（"调用方无需改"）。
model AffectionState {
  userAId           String   @map("user_a_id")
  userBId           String   @map("user_b_id")
  familiarity       Float    @default(0)
  warmth            Float    @default(0)
  trust             Float    @default(0)
  tension           Float    @default(0)
  relationshipLabel String   @default("stranger") @map("relationship_label")
  lastInteractionAt DateTime @default(now()) @map("last_interaction_at")
  // 乐观锁版本号，write 时 where 匹配 version，冲突则重试
  version           Int      @default(0)
  updatedAt         DateTime @updatedAt @map("updated_at")

  @@id([userAId, userBId])
  @@map("affection_states")
}

model Handoff {
  id              String            @id @default(uuid())
  sessionId       String            @unique @map("session_id")
  userAId         String            @map("user_a_id")
  userBId         String            @map("user_b_id")
  status          HandoffStatus     @default(pending)
  contactInfoJson Json?             @map("contact_info_json")
  acceptedAt      DateTime?         @map("accepted_at")
  // 【步骤5修复】handoff 超时字段，创建时设为 now + 7 days，过期 cron 置为 expired
  expiresAt       DateTime?         @map("expires_at")
  createdAt       DateTime          @default(now()) @map("created_at")

  session   AgentSession       @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  responses HandoffResponse[]

  @@map("handoffs")
}

model HandoffResponse {
  id        String          @id @default(uuid())
  handoffId String          @map("handoff_id")
  userId    String          @map("user_id")
  decision  HandoffDecision
  createdAt DateTime        @default(now()) @map("created_at")

  handoff Handoff @relation(fields: [handoffId], references: [id], onDelete: Cascade)

  @@unique([handoffId, userId])
  @@map("handoff_responses")
}

model MatchPush {
  id              String          @id @default(uuid())
  userId          String          @map("user_id")
  candidateUserId String          @map("candidate_user_id")
  status          MatchPushStatus @default(pending)
  affinity        Float?
  pushedAt        DateTime        @default(now()) @map("pushed_at")

  user User @relation("MatchPushUser", fields: [userId], references: [id], onDelete: Cascade)

  @@map("match_pushes")
}

model Block {
  blockerUserId String   @map("blocker_user_id")
  blockedUserId String   @map("blocked_user_id")
  createdAt     DateTime @default(now()) @map("created_at")

  blocker User @relation("Blocker", fields: [blockerUserId], references: [id], onDelete: Cascade)
  blocked User @relation("Blocked", fields: [blockedUserId], references: [id], onDelete: Cascade)

  @@id([blockerUserId, blockedUserId])
  @@map("blocks")
}

model AuditEvent {
  id          String   @id @default(uuid())
  userId      String   @map("user_id")
  cloneId     String?  @map("clone_id")
  eventType   String   @map("event_type")
  referenceId String?  @map("reference_id")
  summaryZh   String   @map("summary_zh")
  createdAt   DateTime @default(now()) @map("created_at")

  user  User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clone DigitalClone? @relation(fields: [cloneId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt(sort: Desc)])
  @@map("audit_events")
}

model Report {
  id         String   @id @default(uuid())
  reporterId String   @map("reporter_id")
  targetType String   @map("target_type")
  targetId   String   @map("target_id")
  reason     String?
  createdAt  DateTime @default(now()) @map("created_at")

  reporter User @relation(fields: [reporterId], references: [id], onDelete: Cascade)

  @@map("reports")
}

model DeviceToken {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  token     String
  platform  String   @default("android")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([userId, token])
  @@map("device_tokens")
}

model OnboardingSession {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  surveyJson Json?   @map("survey_json")
  dialogueJson Json? @map("dialogue_json")
  completed Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("onboarding_sessions")
}

enum NotificationType {
  match_request
  match_accepted
  comment
  reply
  /// 我的评论被别人直接回复（parentCommentId 指向我的评论）。前端用 B 站风格卡片渲染。
  comment_reply
}

model Notification {
  id          String           @id @default(uuid())
  userId      String           @map("user_id")
  type        NotificationType
  title       String
  body        String
  read        Boolean          @default(false)
  refType     String?          @map("ref_type")
  refId       String?          @map("ref_id")
  fromUserId  String?          @map("from_user_id")
  createdAt   DateTime         @default(now()) @map("created_at")
  /// 结构化上下文，当前用于 comment_reply 通知（评论者名/新评论内容/被引用原评论/postId 等）。
  metadataJson Json?           @map("metadata_json")

  @@index([userId, createdAt(sort: Desc)])
  @@map("notifications")
}
